# engram-dashboard

./: .gitignore  README.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  graph.js  vendor.bundle.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
