[package]
name = "engram-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "engram_tauri"
path = "src/lib.rs"

[[bin]]
name = "engram-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
